# webfishing-midi

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  pub.key
.github/workflows/: release.yml
src/: instruments.rs  main.rs  webfishing_player.rs
