[package]
name = "webfishing-midi"
version = "1.1.1"
edition = "2021"

[dependencies]
midly = "0.5.3"
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
log = "0.4.22"
simple_logger = "5.0.0"
enigo = "0.2.1"
device_query = "2.1.0"
xcap = "0.0.14"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
tabled = "0.16.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
